--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
-h1 {color: red;}
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    .roboto-light {
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-style: normal;
+      }
+      
+}
