--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    .roboto-light {
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
-        font-style: normal;
-      }
+    font-family: 'Roboto', sans-serif;
       
 }
