--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    letter-spacing: .6px;
+    letter-spacing: .4px;
 }
 
 .page-wrapper{
     display: flex;
     max-width: 1500px;
-    justify-content: center;
+    
     justify-content: space-evenly;
     height:100vh;
     padding: 50px;
@@ -18,11 +18,11 @@
 
 .profile-pic{
     width: 200px;
-        height: auto;
+    height: auto;
 }
 
-.side2{
-    width: 35%
+.side1, .side2{
+    flex: 1;
 }
 
 .wrapper{
@@ -31,11 +31,11 @@
 
 h1{
     margin-bottom: 5px;
-    font-size: 24px;
+    font-size: 26px;
 }
 
 h2{
-    font-size: 24px;
+    font-size: 26px;
 }
 
 li{
@@ -43,15 +43,17 @@ li{
 }
 p{
     line-height: 1.3em;
-    font-size: 13px;
+    font-size: 12px;
 }
 a{
-    font-size: 13px;
+    font-size: 12px;
 
 }
 @media(max-width:900px){
     .profile-pic{
-        width: 200px;
-        height: auto;
+        width: 100%;
+    }
+    .side1, .side2{
+        flex: 1 1 100%;
     }
 }
