--- a/style.css
+++ b/style.css
@@ -20,13 +20,15 @@
     height: auto;
 }
 
-.side1{
-    padding-right: 10px;
+.side1 {
+    padding-right: 20px;
     border-right: 2px;
+    padding-top: 25%; 
+    padding-bottom: 25%; 
 }
 
-.side2{
-    padding-left: 10px;
+.side2 {
+    padding-left: 20px;
 }
 
 .wrapper{
