--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@
 
 .page-wrapper{
     display: flex;
-    max-width: 1500px;
+    max-width: 1200px;
     justify-content: space-evenly;
     height:100vh;
     padding: 50px;
     flex-wrap: wrap;
+    margin: auto;
 }
 
 .profile-pic{
@@ -21,14 +22,14 @@
 }
 
 .side1 {
-    padding-right: 20px;
-    border-right: 2px;
-    padding-top: 25%; 
-    padding-bottom: 25%; 
+    flex: 1;
+    padding-right: 10px;
+    border-right-width: 1px;
 }
 
 .side2 {
-    padding-left: 20px;
+    flex: 1;
+    padding-left: 10px;
 }
 
 .wrapper{
