--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@
     display: flex;
     max-width: 1200px;
     justify-content: space-evenly;
+    justify-content: center;
     height:100vh;
     padding: 50px;
     flex-wrap: wrap;
     margin: auto;
+    align-items: center;
+    align-content: center;
 }
 
 .profile-pic{
@@ -22,14 +25,13 @@
 }
 
 .side1 {
-    flex: 1;
+    flex: 1 0 50%;
     padding-right: 10px;
     border-right-width: 1px;
 }
 
 .side2 {
-    flex: 1;
-    padding-left: 10px;
+    flex: 1 0 50%;
 }
 
 .wrapper{
@@ -60,6 +62,11 @@ a{
 @media(max-width:900px){
     .profile-pic{
         width: 100%;
+    }
+
+    .side1,.side2{
+        flex: 1 1 100%;
+        padding: 10px 0;
     }
 
 }
