--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@
     padding: 50px;
     flex-wrap: wrap;
     margin: auto;
-    align-items: center;
-    align-content: center;
+    align-items: flex-start;
+    align-content: flex-start;
+    overflow: hidden;
 }
 
 .profile-pic{
@@ -28,6 +29,7 @@
     flex: 1 0 50%;
     padding-right: 10px;
     border-right-width: 1px;
+    flex-direction: column;
 }
 
 .side2 {
@@ -62,6 +64,9 @@ a{
 
 }
 @media(max-width:900px){
+    body{
+        font-size: 14px;
+    }
     .profile-pic{
         width: 80%;
     }
@@ -73,6 +78,13 @@ a{
     }
     .page-wrapper{
         flex-direction: column;
+        padding: 20px;
+    }
+    h1,h2{
+        font-size: 24px;
+    }
+    p,a{
+        font-size: 16px;
     }
 
 }
