--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@
     display: flex;
     max-width: 1200px;
     justify-content: space-evenly;
+    justify-content: center;
     height:100vh;
     padding: 50px;
     flex-wrap: wrap;
     margin: auto;
+    align-items: center;
+    align-content: center;
 }
 .profile-pic{
     max-width: 50%;
@@ -33,25 +36,26 @@
 }
 h1{
     margin-bottom: 5px;
-    font-size: 26px;
+    font-size: 30px;
 }
-
 h2{
-    font-size: 26px;
+    font-size: 30px;
 }
 li{
     list-style: none;
 }
 p{
     line-height: 1.1em;
-    font-size: 16px;
+    font-size: 18px;
 }
 a{
     font-size: 14px;
+    font-size: 16px;
+
 }
 @media(max-width:900px){
     .profile-pic{
-        width: 80%;
+        width: 75%;
     }
     .side1,.side2{
         flex: 1 1 100%;
